--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -2,6 +2,22 @@
     padding: 0;
     list-style: none;
 }
+html,
+body,
+#app {
+   height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+a {
+    text-decoration: none;
+    color: #252933;
+    cursor: pointer;
+}
+a:hover {
+    color: cornflowerblue;
+}
 
 .flex {
     display: flex;
@@ -25,5 +41,9 @@
 }
 .align-stretch {
     align-items: stretch;
+}
+
+.background-white {
+    background-color: #fff;
 }
 
