--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -51,3 +51,9 @@ a:hover {
     color: cornflowerblue;
 }
 
+.flex-center-h100 {
+    display: flex;
+    align-items: center;
+    height: 100%;
+}
+
