--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -31,6 +31,9 @@ a:hover {
 .space-between {
     justify-content: space-between;
 }
+.flex-end {
+    justify-content: flex-end;
+}
 
 .align-center {
     align-items: center;
@@ -56,4 +59,12 @@ a:hover {
     align-items: center;
     height: 100%;
 }
+
+.background-common {
+    background-color: #fff;
+    border-radius: 4px;
+    padding: 15px 15px;
+}
+
+
 
