--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -64,7 +64,7 @@ a:hover {
 .background-common {
     background-color: #fff;
     border-radius: 4px;
-    padding: 15px 15px;
+    padding: 15px 15px !important;
 }
 
 
