--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -36,6 +36,10 @@ a:hover {
     justify-content: flex-end;
 }
 
+.flex-start {
+    justify-content: flex-start;
+}
+
 .align-center {
     align-items: center;
 }
