--- a/src/assets/css/root.scss
+++ b/src/assets/css/root.scss
@@ -43,3 +43,9 @@
   height: 100%;
 }
 
+.background-common {
+  background-color: #fff;
+  border-radius: 4px;
+  padding: 15px 15px !important;
+}
+
