--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -1,1 +1,10 @@
-
+.border_bottom_style {
+  content: "";
+  position: absolute;
+  top: auto;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  height: 2px;
+  background-color: #1e80ff;
+}
