--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -2,13 +2,14 @@
     padding: 0;
     list-style: none;
 }
+
 html,
 body,
 #app {
-   height: 100%;
+    height: 100%;
     margin: 0;
     padding: 0;
-    background-color: rgb(244,245,245);
+    background-color: rgb(244, 245, 245);
 }
 
 a {
@@ -16,6 +17,7 @@ a {
     color: #252933;
     cursor: pointer;
 }
+
 a:hover {
     color: cornflowerblue;
 }
@@ -32,6 +34,7 @@ a:hover {
 .space-between {
     justify-content: space-between;
 }
+
 .flex-end {
     justify-content: flex-end;
 }
@@ -47,6 +50,7 @@ a:hover {
 .space-around {
     justify-content: space-around;
 }
+
 .align-stretch {
     align-items: stretch;
 }
