--- a/src/assets/css/root.scss
+++ b/src/assets/css/root.scss
@@ -46,6 +46,6 @@
 .background-common {
   background-color: #fff;
   border-radius: 4px;
-  padding: 15px 15px !important;
+  padding: 15px !important;
 }
 
