--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -12,6 +12,10 @@ body,
     background-color: rgb(244, 245, 245);
 }
 
+img {
+    cursor: pointer;
+}
+
 a {
     text-decoration: none;
     color: #252933;
@@ -75,5 +79,11 @@ a:hover {
     padding: 15px 15px !important;
 }
 
+
+.icon-img {
+    width: 16px;
+    height: 16px;
+    padding-right: 4px;
+}
 
 
